--- a/client/vue/src/style.css
+++ b/client/vue/src/style.css
@@ -4,3 +4,32 @@
 @theme {
    --font-inter: "Inter", sans-serif;
 }
+
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
+html {
+   scroll-behavior: smooth;
+}
+
+body {
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+}
+
+ul {
+   list-style-type: none;
+}
+
+a {
+   text-decoration: none;
+   color: inherit;
+}
+
+img {
+   width: 100%;
+   height: auto;
+}
